# NN

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  neural_network.cpp  utils.cpp
include/: layer.h  neural_network.h  utils.h
